--- a/famous/client/famous.css
+++ b/famous/client/famous.css
@@ -1,6 +1,6 @@
 #carousel{
-    width : 275px;
-    height: 275px;
+    /*width : 275px;*/
+    /*height: 275px;*/
     position: relative;
     overflow: hidden;
 }
