--- a/famous/client/famous.css
+++ b/famous/client/famous.css
@@ -50,12 +50,13 @@
 
 
 .card {
-  width: 25%;
-  height: 25%;
+  /*width: 50px;*/
+  /*height: 25%;*/
   position: relative;
   transform-style: preserve-3d;
   transition: transform 1s;
   float: left;
+  padding: 0 !important;
 }
 figure{
   -webkit-margin-before: 0em;
@@ -65,14 +66,14 @@ figure{
 }
 .card figure {
   display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  /*position: absolute;*/
+  /*width: 100%;*/
+  /*height: 100%;*/
   backface-visibility: hidden;
 }
 .card figure img{
-  height: 100%;
-  width: 100%;
+  /*height: 100%;*/
+  /*width: 100%;*/
 }
 .card .front {
   background: red;
@@ -85,3 +86,7 @@ figure{
   transform: rotateY( 180deg );
 }
 /* transition types*/
+figure.back.main {
+/* display: none; */
+  margin-top: -141%;
+}
