--- a/famous/client/famous.css
+++ b/famous/client/famous.css
@@ -70,6 +70,7 @@ figure{
   /*width: 100%;*/
   /*height: 100%;*/
   backface-visibility: hidden;
+  position: absolute;
 }
 .card figure img{
   /*height: 100%;*/
@@ -86,8 +87,5 @@ figure{
   transform: rotateY( 180deg );
 }
 /* transition types*/
-figure.back.main {
-/* display: none; */
-  margin-top: -141%;
-}
+
 /*-webkit-user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); touch-action: none;*/
