--- a/client/famous/famous.css
+++ b/client/famous/famous.css
@@ -50,19 +50,46 @@
 
 
 .card {
-  /*width: 50px;*/
-  /*height: 25%;*/
-  position: relative;
-  transform-style: preserve-3d;
-  transition: transform 1s;
-  float: left;
-  padding: 0 !important;
+    /*width: 50px;*/
+    /*height: 25%;*/
+    position: relative;
+    transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+
+    transition: transform 1s;
+    -ms-transition: -ms-transform 1s;
+    -webkit-transition: -webkit-transform 1s;
+    -o-transition: -o-transform 1s;
+    -moz-transition: -moz-transform 1s;
+
+    float: left;
+    padding: 0 !important;
 }
 figure{
-  -webkit-margin-before: 0em;
-  -webkit-margin-after: 0em;
-  -webkit-margin-start: 0px;
-  -webkit-margin-end: 0px;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+
+    -ms-margin-before: 0em;
+    -ms-margin-after: 0em;
+    -ms-margin-start: 0px;
+    -ms-margin-end: 0px;
+
+    -o-margin-before: 0em;
+    -o-margin-after: 0em;
+    -o-margin-start: 0px;
+    -o-margin-end: 0px;
+
+    -moz-margin-before: 0em;
+    -moz-margin-after: 0em;
+    -moz-margin-start: 0px;
+    -moz-margin-end: 0px;
+
+    position: absolute;
 }
 .card figure {
   display: block;
@@ -70,7 +97,10 @@ figure{
   /*width: 100%;*/
   /*height: 100%;*/
   backface-visibility: hidden;
-  position: absolute;
+  -webkit-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  -moz-position: absolute;
 }
 .card figure img{
   /*height: 100%;*/
@@ -81,9 +111,17 @@ figure{
 }
 .card .back {
     transform: rotateY( 180deg );
+    -ms-transform: rotateY( 180deg );
+    -webkit-transform: rotateY( 180deg );
+    -o-transform: rotateY( 180deg );
+    -moz-transform: rotateY( 180deg );
 }
 .card.flipped {
     transform: rotateY( 180deg );
+    -ms-transform: rotateY( 180deg );
+    -webkit-transform: rotateY( 180deg );
+    -o-transform: rotateY( 180deg );
+    -moz-transform: rotateY( 180deg );
 }
 /* transition types*/
 
@@ -95,10 +133,12 @@ figure{
 #clickEvent{
     padding-left: 0!important;
     padding-right: 0 !important;
+    filter: blur(4px);
     -webkit-filter: blur(4px);
     background-color: white;
     width: 105%;
     left: -2.5%;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
