--- a/client/famous/famous.css
+++ b/client/famous/famous.css
@@ -133,8 +133,6 @@ figure{
 #clickEvent{
     padding-left: 0!important;
     padding-right: 0 !important;
-    filter: blur(4px);
-    -webkit-filter: blur(4px);
     background-color: white;
     width: 105%;
     left: -2.5%;
@@ -142,6 +140,10 @@ figure{
     -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -webkit-filter: blur(4px);
+    -ms-filter: blur(4px);
+    filter: blur(4px);
+    -o-filter: blur(4px);
 }
 .selectedFace{
     border-style: solid;
