--- a/client/famous/gamePopUp/gamePopUp.css
+++ b/client/famous/gamePopUp/gamePopUp.css
@@ -9,6 +9,10 @@
         margin-left: auto;
         margin-right: auto;
         transform: rotateZ(-45deg);
+        -ms-transform: rotateZ(-45deg);
+    -webkit-transform: rotateZ(-45deg);
+    -o-transform: rotateZ(-45deg);
+    -moz-transform: rotateZ(-45deg);
 }
 .pin {
         content: '';
@@ -21,6 +25,10 @@
         right: 0;
         background-color: #30CBF1;
         transform: rotateZ(45deg);
+        -ms-transform: rotateZ(45deg);
+    -webkit-transform: rotateZ(45deg);
+    -o-transform: rotateZ(45deg);
+    -moz-transform: rotateZ(45deg);
         border-radius: 50% 50% 0 50%;
         width: 3em;
         height: 3em;
