--- a/client/index/index.css
+++ b/client/index/index.css
@@ -29,11 +29,11 @@
         position: relative;
         width: 95%;
         left: 2.5%;
-        top: 10%;
-/*        -webkit-transform: translateY(-50%);
+        top: 40%;
+        -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
-        -o-transform: translateY(-50%);*/
+        -o-transform: translateY(-50%);
 }
 .overlay div{
         position: relative;
