--- a/server/email.handlebars
+++ b/server/email.handlebars
@@ -109,18 +109,18 @@
                                                                         </td>
                                                                     </tr>
                                                                     <tr style="color:#205478;"> 
-                                                                      <th>Username</th>
-                                                                      <th>Time</th>
-                                                                      <th>Attemped</th>
-                                                                      <th>Right</th>
-                                                                      <th>Wrong</th>
+                                                                      <th width="150px">Username</th>
+                                                                      <th width="100px">Time</th>
+                                                                      <th width="100px">Attemped</th>
+                                                                      <th width="100px">Right</th>
+                                                                      <th width="100px">Wrong</th>
                                                                     </tr>
                                                                     <tr style="color:#205478;"> 
-                                                                      <th>{{username}}</th>
-                                                                      <th>{{gameEnd}}</th>
-                                                                      <th>{{clicked}}</th>
-                                                                      <th>{{score}}</th>
-                                                                      <th>{{wrong}}</th>
+                                                                      <td width="150px" align="center">{{username}}</td>
+                                                                      <td width="100px" align="center">{{gameEnd}}</td>
+                                                                      <td width="100px" align="center">{{clicked}}</td>
+                                                                      <td width="100px" align="center">{{score}}</td>
+                                                                      <td width="100px" align="center">{{wrong}}</td>
                                                                     </tr>
                                                                 </tbody></table>
                                                             </td>
