--- a/server/email.handlebars
+++ b/server/email.handlebars
@@ -92,7 +92,7 @@
                          </td>
                     </tr>                            
                     <tr>
-                        <td align="center" valign="top">
+                        <td align="center" valign="top" style="padding-left: 0px;">
                             <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#F8F8F8">
                                 <tbody><tr>
                                     <td align="center" valign="top">
@@ -101,13 +101,10 @@
                                                 <td align="center" valign="top" width="650" class="flexibleContainerCell">
                                                     <table border="0" cellpadding="30" cellspacing="0" width="100%">
                                                         <tbody><tr>
-                                                            <td align="center" valign="top">
+                                                            <td valign="top">
+                                                                <h3 style="color:#5F5F5F;line-height:125%;font-family:Helvetica,Arial,sans-serif;font-size:20px;font-weight:normal;margin-top:0;margin-bottom:3px;text-align:left;">Hi, {{email}}</h3>
                                                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                                                                    <tbody><tr>
-                                                                        <td valign="top" class="textContent">
-                                                                            <h3 style="color:#5F5F5F;line-height:125%;font-family:Helvetica,Arial,sans-serif;font-size:20px;font-weight:normal;margin-top:0;margin-bottom:3px;text-align:left;">Hi, {{email}}</h3>
-                                                                        </td>
-                                                                    </tr>
+                                                                    <tbody>
                                                                     <tr style="color:#205478;"> 
                                                                       <th width="150px">Username</th>
                                                                       <th width="100px">Time</th>
