--- a/client/menu/menu.css
+++ b/client/menu/menu.css
@@ -18,3 +18,11 @@
 	background-color: black;
 	color: white;
 }
+tr{
+	background: white;
+	text-align: center;
+}
+td{
+	border: 0;
+	text-align: center !important;
+}
