--- a/server/email.handlebars
+++ b/server/email.handlebars
@@ -31,7 +31,7 @@
             .ExternalClass td[class="ecxflexibleContainerBox"] h3 {padding-top: 10px !important;} 
             h1{display:block;font-size:26px;font-style:normal;font-weight:normal;line-height:100%;}
             h2{display:block;font-size:20px;font-style:normal;font-weight:normal;line-height:120%;}
-            h3{display:block;font-size:17px;font-style:normal;font-weight:normal;line-height:110%;}
+            h3{display:block;font-size:17px;font-style:normal;font-wei  ht:normal;line-height:110%;}
             h4{display:block;font-size:18px;font-style:italic;font-weight:normal;line-height:100%;}
             .flexibleImage{height:auto;}
             .linkRemoveBorder{border-bottom:0 !important;}
@@ -109,7 +109,7 @@
                                                                       <th width="150px">Username</th>
                                                                       <th width="100px">Time</th>
                                                                       <th width="100px">Attemped</th>
-                                                                      <th width="100px">Right</th>
+                                                                      <th width="100px">Score</th>
                                                                       <th width="100px">Wrong</th>
                                                                     </tr>
                                                                     <tr style="color:#205478;"> 
