--- a/client/menu/menu.css
+++ b/client/menu/menu.css
@@ -10,14 +10,6 @@
 .lastResult{
 	padding-left: 10% !important;
 }
-.grey{
-	background-color: grey;
-	color: white;
-}
-.black{
-	background-color: cyan !important;
-	color: grey !important;
-}
 tr{
 	background: white;
 	text-align: center;
@@ -43,5 +35,30 @@ ul.off-canvas-list li :hover{
 }
 .black:hover{
 	background-color: grey !important;
+	color: cyan !important;
+}
+
+.sfef{
+	background-color: grey !important;
+	color: grey !important;
+}
+.sfef:hover{
+	background-color: white !important;
+	color: white !important;
+}
+.stef{
+	background-color: grey !important;
+	color: cyan !important;
+}
+.stef:hover{
+	background-color: cyan !important;
+	color: grey !important;
+}
+.stet{
+	background-color: cyan !important;
+	color: white !important;
+}
+.stet:hover{
+	background-color: white !important;
 	color: cyan !important;
 }
