--- a/server/email.handlebars
+++ b/server/email.handlebars
@@ -78,7 +78,7 @@
                                                     <table border="0" cellpadding="30" cellspacing="0" width="100%">
                                                         <tbody><tr>
                                                             <td align="center" valign="top" class="textContent">
-                                                                <h1 style="color:#FFFFFF;line-height:100%;font-family:Helvetica,Arial,sans-serif;font-size:35px;font-weight:normal;margin-bottom:5px;text-align:center;">Sixteensmiles</h1>
+                                                                <h1 style="color:#FFFFFF;line-height:100%;font-family:Helvetica,Arial,sans-serif;font-size:35px;font-weight:normal;margin-bottom:5px;text-align:center;">WhoGotHappy?</h1>
                                                                 <h2 style="text-align:center;font-weight:normal;font-family:Helvetica,Arial,sans-serif;font-size:23px;margin-bottom:10px;color:#205478;line-height:135%;">See Smiles Everywhere!</h2> 
                                                             </td>
                                                         </tr>
@@ -102,22 +102,24 @@
                                                     <table border="0" cellpadding="30" cellspacing="0" width="100%">
                                                         <tbody><tr>
                                                             <td valign="top">
-                                                                <h3 style="color:#5F5F5F;line-height:125%;font-family:Helvetica,Arial,sans-serif;font-size:20px;font-weight:normal;margin-top:0;margin-bottom:3px;text-align:left;">Hi, {{email}}</h3>
+                                                                <h3 style="color:#5F5F5F;line-height:125%;font-family:Helvetica,Arial,sans-serif;font-size:20px;font-weight:normal;margin-top:0;margin-bottom:3px;text-align:left;">Hi, {{username}}</h3>
                                                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                                     <tbody>
                                                                     <tr style="color:#205478;"> 
-                                                                      <th width="150px">Username</th>
+                                                                      
                                                                       <th width="100px">Time</th>
-                                                                      <th width="100px">Attemped</th>
-                                                                      <th width="100px">Score</th>
-                                                                      <th width="100px">Wrong</th>
+                                                                      <th width="80px">Attemped</th>
+                                                                      <th width="80px">Score</th>
+                                                                      <th width="80px">Wrong</th>
+                                                                      <th width="80px">Smiles</th>
                                                                     </tr>
                                                                     <tr style="color:#205478;"> 
-                                                                      <td width="150px" align="center">{{username}}</td>
+                                                                      
                                                                       <td width="100px" align="center">{{gameEnd}}</td>
-                                                                      <td width="100px" align="center">{{clicked}}</td>
-                                                                      <td width="100px" align="center">{{score}}</td>
-                                                                      <td width="100px" align="center">{{wrong}}</td>
+                                                                      <td width="80px" align="center">{{clicked}}</td>
+                                                                      <td width="80px" align="center">{{score}}</td>
+                                                                      <td width="80px" align="center">{{wrong}}</td>
+                                                                      <td width="80px" align="center">{{corrected}}</td>
                                                                     </tr>
                                                                 </tbody></table>
                                                             </td>
@@ -143,7 +145,7 @@
                                                         <tbody><tr>
                                                             <td align="left" valign="top" class="textContent">
                                                                 <div style="text-align:left;font-family:Helvetica,Arial,sans-serif;font-size:15px;margin-bottom:0;margin-top:10px;color:#fffff;line-height:135%;"><div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;color:#828282;text-align:center;line-height:120%;">
-                                                                Copyright © 2014 <a href="" target="" style="text-decoration:none;color:#205478;"><span style="color:#fffff;">SixteenSmiles</span></a>. All&nbsp;rights&nbsp;reserved.</div>
+                                                                Copyright © 2014 <a href="" target="" style="text-decoration:none;color:#205478;"><span style="color:#fffff;">WhoGotHappy?</span></a>. All&nbsp;rights&nbsp;reserved.</div>
                                                                     <div>If you do not want to recieve emails from us, you can <a href="#" target="" style="text-decoration:none;color:#205478;"><span style="color:#205478;">unsubscribe</span></a>.</div>
                                                             </div>
                                                             </td>
