--- a/client/menu/slider/slider.css
+++ b/client/menu/slider/slider.css
@@ -1,6 +1,11 @@
-#featured1{
-
-}
-.orbit-container .orbit-timer, .orbit-slide-number{
-	display: none;
-}
+    #owl-demo .owl-item div{
+      padding:5px;
+    }
+    #owl-demo .owl-item img{
+      display: block;
+      width: 100%;
+      height: auto;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;
+    }
