--- a/client/famous/famous.css
+++ b/client/famous/famous.css
@@ -139,7 +139,7 @@ figure{
     padding-right: 0 !important;
     background-color: white;
     width: 105%;
-    left: -2.5%;
+    /*left: -2.5%;*/
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
