--- a/client/famous/gameTimer/gameTimer.css
+++ b/client/famous/gameTimer/gameTimer.css
@@ -7,3 +7,20 @@
 /*.restart{
 	display: none;
 }*/
+
+.selected figure{
+	position: relative;
+	float: left;
+}
+.zoomed img{
+
+}
+.zoomed{
+	position: fixed;
+	display: none;
+	z-index: 100;
+	margin: auto;
+	width: 100%;
+	height: 100%;
+
+}
