--- a/client/famous/new_box/new_box.css
+++ b/client/famous/new_box/new_box.css
@@ -1,4 +1,5 @@
 #sisxteenBox{
 	padding-left: 0!important;
-    padding-right: 0 !important;
+	padding-right: 0 !important;
+	background-color: white;
 }
