--- a/client/famous/localPopUp/local_PopUp.css
+++ b/client/famous/localPopUp/local_PopUp.css
@@ -41,3 +41,30 @@
         margin-right: auto; 
         margin-bottom: 2em;
 }
+#tapTapEnded2{
+        display: none;
+}
+#clickEvent2{
+    position: relative;
+    /*height: 100%;*/
+    width: 100%;
+}
+#famousSquare2{
+    padding-left: 0!important;
+    padding-right: 0 !important;
+}
+#clickEvent2{
+    padding-left: 0!important;
+    padding-right: 0 !important;
+    background-color: white;
+    width: 100%;
+    /*left: -2.5%;*/
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -webkit-filter: blur(4px);
+    -ms-filter: blur(4px);
+    filter: blur(4px);
+    -o-filter: blur(4px);
+}
