--- a/client/homepage/homepage.css
+++ b/client/homepage/homepage.css
@@ -9,3 +9,13 @@
 	width: 100%;
 	height: 100%;
 }
+#iconButton{
+	position: absolute;
+	right: 22px;
+	top: 4px;
+	width: 50px;
+	height: 50px;
+	padding: 0;
+	border-radius: 3px;
+	z-index: 10;
+}
