--- a/client/famous/localPopUp/local_PopUp.css
+++ b/client/famous/localPopUp/local_PopUp.css
@@ -121,3 +121,23 @@
     /*background: red;*/
     display: none;
 }
+.greidentHorizontal {
+  /* background: rgb(76,182,72); */
+  background: -moz-linear-gradient(bottom, rgba(233,81,70,1) 0px, rgba(76,182,72,1) 500px);
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0px,rgba(233,81,70,1)), color-stop(500px,rgba(76,182,72,1)));
+  background: -webkit-linear-gradient(top, rgba(233,81,70,1) 0px,rgba(76,182,72,1) 500px);
+  background: -o-linear-gradient(bottom, rgba(233,81,70,1) 0px,rgba(76,182,72,1) 500px);
+  background: -ms-linear-gradient(bottom, rgba(233,81,70,1) 0px,rgba(76,182,72,1) 500px);
+  background: linear-gradient(to top, rgba(233,81,70,1) 0px,rgba(76,182,72,1) 500px);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4cb648', endColorstr='#e95146',GradientType=0 );
+}
+.greidentVertical {
+  background: rgb(233,81,70);
+  background: -moz-linear-gradient(left, rgba(233,81,70,1) 0px, rgba(76,182,72,1) 500px);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(233,81,70,1)), color-stop(100%,rgba(76,182,72,1)));
+  background: -webkit-linear-gradient(left, rgba(233,81,70,1) 0px,rgba(76,182,72,1) 500px);
+  background: -o-linear-gradient(left, rgba(233,81,70,1) 0px,rgba(76,182,72,1) 500px);
+  background: -ms-linear-gradient(left, rgba(233,81,70,1) 0px,rgba(76,182,72,1) 500px);
+  background: linear-gradient(to right, rgba(233,81,70,1) 0px,rgba(76,182,72,1) 500px);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e95146', endColorstr='#4cb648',GradientType=1 );
+}
