--- a/server/emailweakly.handlebars
+++ b/server/emailweakly.handlebars
@@ -60,7 +60,7 @@
             @media only screen and (min-device-width : 320px) and (max-device-width:568px) {}
 </style>
 </head>
-<title>SixteenSmiles</title>
+<title>Whogothappy</title>
 <body bgcolor="#E1E1E1" leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0">
 <center style="background-color:#E1E1E1;">
     <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable" style="table-layout: fixed;max-width:100% !important;width: 100% !important;min-width: 100% !important;">
