--- a/server/route/emailInvite.handlebars
+++ b/server/route/emailInvite.handlebars
@@ -60,7 +60,7 @@
             @media only screen and (min-device-width : 320px) and (max-device-width:568px) {}
 </style>
 </head>
-<title>SixteenSmiles</title>
+<title>Whogothappy</title>
 <body bgcolor="#E1E1E1" leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0">
 <center style="background-color:#E1E1E1;">
     <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable" style="table-layout: fixed;max-width:100% !important;width: 100% !important;min-width: 100% !important;">
@@ -78,7 +78,7 @@
                                                     <table border="0" cellpadding="30" cellspacing="0" width="100%">
                                                         <tbody><tr>
                                                             <td align="center" valign="top" class="textContent">
-                                                                <h1 style="color:#FFFFFF;line-height:100%;font-family:Helvetica,Arial,sans-serif;font-size:35px;font-weight:normal;margin-bottom:5px;text-align:center;">Sixteensmiles</h1>
+                                                                <h1 style="color:#FFFFFF;line-height:100%;font-family:Helvetica,Arial,sans-serif;font-size:35px;font-weight:normal;margin-bottom:5px;text-align:center;">Whogothappy</h1>
                                                                 <h2 style="text-align:center;font-weight:normal;font-family:Helvetica,Arial,sans-serif;font-size:23px;margin-bottom:10px;color:#205478;line-height:135%;">See Smiles Everywhere!</h2> 
                                                             </td>
                                                         </tr>
@@ -135,7 +135,7 @@
                                                         <tbody><tr>
                                                             <td align="left" valign="top" class="textContent">
                                                                 <div style="text-align:left;font-family:Helvetica,Arial,sans-serif;font-size:15px;margin-bottom:0;margin-top:10px;color:#fffff;line-height:135%;"><div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;color:#828282;text-align:center;line-height:120%;">
-                                                                Copyright © 2014 <a href="" target="" style="text-decoration:none;color:#205478;"><span style="color:#fffff;">SixteenSmiles</span></a>. All&nbsp;rights&nbsp;reserved.</div>
+                                                                Copyright © 2014 <a href="" target="" style="text-decoration:none;color:#205478;"><span style="color:#fffff;">Whogothappy</span></a>. All&nbsp;rights&nbsp;reserved.</div>
                                                                     <div>If you do not want to recieve emails from us, you can <a href="#" target="" style="text-decoration:none;color:#205478;"><span style="color:#205478;">unsubscribe</span></a>.</div>
                                                             </div>
                                                             </td>
