--- a/whogothappy/client/settings/settings.css
+++ b/whogothappy/client/settings/settings.css
@@ -1,3 +1,12 @@
-.model{
-
+.ui.form.settings{
+  margin-bottom: 150px;
+}
+.ui.selection.dropdown .menu{
+  max-height: 10rem;
+}
+.ui.form .fields{
+  margin: 5px;
+}
+h2.ui.header{
+  margin-right: 5px;
 }
