--- a/client/famous/gamePopUp/gamePopUp.css
+++ b/client/famous/gamePopUp/gamePopUp.css
@@ -5,7 +5,7 @@
         line-height: 1em;
         text-align: center;
         position: relative;
-        color: white;        
+        color: white;
         margin-left: auto;
         margin-right: auto;
         transform: rotateZ(-45deg);
@@ -35,9 +35,9 @@
         line-height: 4em;
         text-align: center;
         position: relative;
-        color: white;        
+        color: white;
         margin-left: auto;
-        margin-right: auto; 
+        margin-right: auto;
         margin-bottom: 2em;
 }
 #tapTapEnded{
@@ -73,4 +73,18 @@
 }
 #challengeSentDiv{
     display: none;
+}
+#setImageTypePopup{
+    top: 50%;
+    left: 4%;
+    position: fixed;
+    z-index: 30;
+    background: #f2f2f2;
+    height: auto;
+    width: 92%;
+    border-color: #535353;
+    border: 3px;
+    border-style: solid;
+    display: none;
+    padding: 10px;
 }
